# PhotoFilter

./: CMakeLists.txt  CamWidget.cpp  CamWidget.h  MainWindow.cpp  MainWindow.h  main.cpp  vcpkg.json
.github/workflows/: build.yml
